# marvin

./: .env.example  README.md  pyproject.toml
.github/workflows/: run.yaml
src/marvin/: __init__.py  __main__.py
