[project]
name = "marvin"
version = "0.1.0"
description = "a simple cron job that posts questions to a matrix room"
authors = [
    { name = "usysrc", email = "usysrc@usysrc.dev" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marvin"]
